# Motion_Planning

./: README.md
Project_8/devel/: .catkin  local_setup.sh  setup.sh
Project_8/devel/include/quadrotor_msgs/: AuxCommand.h  Corrections.h  Gains.h  LQRTrajectory.h  Odometry.h  OutputData.h  PPROutputData.h  PolynomialTrajectory.h  PositionCommand.h  SO3Command.h  Serial.h  StatusData.h  TRPYCommand.h
Project_8/devel/lib/map_generator/: random_complex
Project_8/devel/lib/map_render/: pcl_render_node
Project_8/devel/lib/odom_visualization/: odom_visualization
Project_8/devel/lib/pkgconfig/: map_generator.pc  map_render.pc  odom_visualization.pc  pose_utils.pc  quadrotor_msgs.pc  rviz_plugins.pc  so3_control.pc  so3_quadrotor_simulator.pc  traj_server.pc  trajectory_generator.pc  waypoint_generator.pc
Project_8/devel/lib/so3_quadrotor_simulator/: quadrotor_simulator_so3
Project_8/devel/lib/traj_server/: traj_server_node
Project_8/devel/lib/waypoint_generator/: waypoint_generator
Project_8/src/trajectory_generator/include/: Astar_searcher.h  trajectory_generator_waypoint.h
Project_8/src/trajectory_generator/launch/: demo.launch
Project_8/src/trajectory_generator/src/: Astar_searcher.cpp  trajectory_generator_node.cpp  trajectory_generator_waypoint.cpp
project_1/src/grid_path_searcher/: CMakeLists.txt
project_1/src/grid_path_searcher/include/: Astar_searcher.h  JPS_searcher.h  node.h
project_1/src/grid_path_searcher/launch/: demo.launch
project_1/src/grid_path_searcher/src/: Astar_searcher.cpp  Teset.cpp  Test1.cpp  demo_node.cpp
project_4/devel/: .catkin  local_setup.sh  setup.sh
project_4/src/: CMakeLists.txt
project_4/src/waypoint_trajectory_generator/: CMakeLists.txt
project_4/src/waypoint_trajectory_generator/launch/: test.launch
project_4/src/waypoint_trajectory_generator/src/: ooqp_inter.cpp  ooqp_inter.h  ooqp_test_node.cpp  ooqp_test_node.h  test_node.cpp  trajectory_generator_node.cpp  trajectory_generator_waypoint.cpp  trajectory_generator_waypoint.h
project_6/: dynamic_programming.py  dynamic_programming_fast_plan.py  dynamic_programming_with_Euclidean_or_Diagonal.py  dynamic_programming_with_modified_g_value initialization.py  dynamic_programming_with_random_choice.py  graph_node.py  racetracks.py
project_7/: Hw8.docx  QP_based_MPC_Tracking.m  ch8_hw1_1.m  getPredictionMatrix.m
(+57 files in other folders)
